--- a/scss/index.css
+++ b/scss/index.css
@@ -46,7 +46,15 @@ button,
 select,
 label,
 a {
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: transparent !important;
+}
+
+a:focus, a:visited, a:active {
+  outline: none;
+}
+
+* {
+  -webkit-tap-highlight-color: transparent;
 }
 
 .typed-cursor {
